# rbx-dom

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CODEOWNERS  Cargo.toml  LICENSE.txt  README.md  aftman.toml  default.project.json  foreman.toml  gen-reflection  gen-reflection.bat  out.json  rbx_dom_lua.rbxlx  roblox-patch.yml  selene.toml
generate_rbx_reflection/: Cargo.toml  README.md
generate_rbx_reflection/plugin/src/: init.lua
generate_rbx_reflection/src/: api_dump.rs  main.rs  reflection_database.rs  roblox_install.rs  roblox_plugin_template.lua  run_in_roblox.rs
generate_reflection/: Cargo.toml  README.md  build.rs  canonical-properties.toml  property-patches.toml
generate_reflection/patches/: body-movers.toml  body-movers.yml  camera.toml  fire-and-smoke.toml  fire-and-smoke.yml  instance.toml  instance.yml  joint-instance.toml  localization-table.toml  localization-table.yml  mesh-part.yml  model-pivot.yml  package-link.yml  parts.toml  parts.yml  players.toml  players.yml  sound.toml  sound.yml  weld-constraint.yml  workspace.toml  workspace.yml
generate_reflection/plugin/: default.project.json  main.lua
generate_reflection/plugin/src/: init.lua
generate_reflection/src/: api_dump.rs  canonical_properties.rs  database.rs  defaults_place.rs  emitter_lua.rs  emitter_rust.rs  main.rs  plugin_injector.rs  property_patches.rs  reflection_types.rs  roblox_install.rs  run_in_roblox.rs  studio_keyboard.rs  values.rs
rbx_binary/: CHANGELOG.md  Cargo.toml  FORMAT.md  README.md
rbx_binary/bench-files/: parts-10000.rbxm
rbx_binary/benches/: README.md  deserializer.rs  serializer.rs
rbx_binary/benches/files/: deep-folders-100.rbxm  folders-100.rbxm  modulescripts-100-lines-100.rbxm  parts-1000.rbxm
rbx_binary/benches/suite/: main.rs  util.rs
rbx_binary/src/: cframe.rs  chunk.rs  chunks.rs  core.rs  debug_deserializer.rs  deserializer.rs  deserializer_new.rs  header.rs  lib.rs  serializer.rs  serializer_new.rs  text_deserializer.rs  types.rs  types_new.rs
rbx_binary/src/deserializer/: chunk_inst.rs  chunk_meta.rs  chunk_sstr.rs  error.rs  file.rs  header.rs  intern.rs  mod.rs  state.rs  vecmap.rs
rbx_binary/src/serializer/: error.rs  fastdom.rs  mod.rs  state.rs
rbx_binary/src/tests/: core_read_write.rs  mod.rs  models.rs  places.rs  serializer.rs  text_deserializer.rs  util.rs
rbx_binary/src/types/: bool.rs  mod.rs  string.rs
rbx_binary/test-files/: Baseplate.rbxl  folder-with-script.rbxm  hierarchy-with-refs.rbxm  model-b.rbxm  model-c.rbxm
rbx_binary/test-files/from-studio/: default-inserted-folder.rbxm  default-inserted-part.rbxm  nested-folders.rbxm
rbx_binary/tests/: lighting_unified_migration.rs  round_trip.rs
rbx_binary/tests/snapshots/: round_trip__folder-with-script.rbxm.snap  round_trip__hierarchy-with-refs.rbxm.snap  round_trip__just-folder.rbxm.snap
rbx_binary_core/: Cargo.toml  README.md
rbx_binary_core/src/: chunk.rs  header.rs  lib.rs  types.rs
rbx_binary_wasm/: Cargo.toml  README.md
rbx_binary_wasm/src/: lib.rs
rbx_dom_test/: Cargo.toml  README.md
rbx_dom_test/src/: builder.rs  lib.rs
rbx_dom_test/src/snapshots/: test__redact_multi.snap  test__redact_single.snap  test__redact_values.snap
rbx_dom_weak/: CHANGELOG.md  Cargo.toml  README.md
rbx_dom_weak-v2/: CHANGELOG.md  Cargo.toml  README.md
rbx_dom_weak-v2/src/: dom.rs  lib.rs  viewer.rs
rbx_dom_weak/src/: ambiguous_value.rs  brick_color.rs  dom.rs  id.rs  instance.rs  interned_buffer.rs  lib.rs  lister.rs  shared_string.rs  tree.rs  unresolved_value.rs  untagged_value.rs  value.rs  value_conversion.rs  viewer.rs
rbx_dom_weak/tests/: value_conversion.rs  value_encoding.rs
rbx_dom_weak_v3/: CHANGELOG.md  Cargo.toml
rbx_dom_weak_v3/src/: dom.rs  instance.rs  lib.rs  temp_id.rs
rbx_reflection/: CHANGELOG.md  Cargo.toml  README.md
rbx_reflection/src/: class_tag.rs  core.rs  database.rs  dump.rs  lib.rs  migration.rs  property_tag.rs  reflection_database.rs  reflection_types.rs  resolution.rs  serde_util.rs  tag_util.rs  types.rs  version.rs
rbx_reflection/tests/: smoke_test.rs
rbx_reflection_database/: CHANGELOG.md  Cargo.toml  README.md  database.msgpack  empty.msgpack
rbx_reflection_database/src/: error.rs  lib.rs
rbx_reflector/: Cargo.toml  README.md  plugin.lua
rbx_reflector/plugin/: main.lua
rbx_reflector/src/: api_dump.rs  defaults.rs  lib.rs  main.rs  patches.rs  plugin_injector.rs  studio_version.rs
rbx_types/: CHANGELOG.md  Cargo.toml  README.md
rbx_types/src/: attributes.rs  axes.rs  basic_types.rs  binary_string.rs  brick_color.rs  collision_groups.rs  content.rs  error.rs  faces.rs  font.rs  legacy_compat.rs  lib.rs  lister.rs  material_colors.rs  physical_properties.rs  qdir.rs  referent.rs  roblox_string.rs  security_capabilities.rs  serde_util.rs  shared_string.rs  smooth_grid.rs  tags.rs  tween_info.rs  unique_id.rs  variant.rs
rbx_util/: CHANGELOG.md  Cargo.toml  README.md
rbx_util/src/: convert.rs  main.rs  remove_prop.rs  view_binary.rs
rbx_xml/: CHANGELOG.md  Cargo.toml  README.md
rbx_xml/benches/: crossroads.rs
rbx_xml/src/: compat.rs  conversion.rs  core.rs  deserializer.rs  deserializer_core.rs  error.rs  lib.rs  macros.rs  property_descriptor.rs  reflection.rs  serializer.rs  serializer_core.rs  test_util.rs  value.rs
rbx_xml/test-files/: baseplate.rbxlx  body-movers.rbxmx  decals.rbxmx  effects.rbxmx  fire.rbxmx  gui.rbxmx  inf-and-nan.rbxmx  number-value-int32.rbxmx  numbers.rbxmx  part-referent.rbxmx  part.rbxmx  parts.rbxmx  physical-properties.rbxmx  sound.rbxmx  spawn-location.rbxmx  tags.rbxmx  team-lilac.rbxmx  team.rbxmx  terrain.rbxmx  union.rbxmx
rbx_xml/tests/: all_instances.rs  basic.rs  brick_color.rs  deserializer_legacy.rs  deserializer_options.rs  errors.rs  fire.rs  lighting_unified_migration.rs  parts.rs  referent.rs  round_trip.rs  serializer_options.rs  shared_string.rs  temp.rs  test-files.rs  value_conversion.rs
rbx_xml/tests-disabled/: brick_color.rs  errors.rs  fire.rs  referent.rs  round_trip.rs  serializer_options.rs  shared_string.rs  value_conversion.rs
(+621 files in other folders)
