[package]
name = "generate_rbx_reflection"
version = "0.1.0"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"
publish = false

[dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1"
lazy_static = "1"
tempfile = "3"
quote = "0.6"
proc-macro2 = "0.4"
rouille = "3.0.0"
rbx_dom_weak = { version = "0.3.0", path = "../rbx_dom_weak" }
rbx_xml = { version = "0.3.0", path = "../rbx_xml" }
