[package]
name = "generate_rbx_reflection"
version = "0.1.0"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"
publish = false

[dependencies]
futures = "0.1"
hyper = "0.12"
proc-macro2 = "0.4"
quote = "0.6"
rbx_dom_weak = { version = "0.3.0", path = "../rbx_dom_weak" }
rbx_xml = { version = "0.3.0", path = "../rbx_xml" }
rouille = "3.0.0"
serde = "1"
serde_derive = "1"
serde_json = "1"
tempfile = "3"
