[package]
name = "generate_reflection"
description = "Generates the rbx-dom reflection database."
version = "0.1.0"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"
publish = false

[dependencies]
rbx_binary = { path = "../rbx_binary" }
rbx_dom_weak = { path = "../rbx_dom_weak" }
rbx_reflection = { path = "../rbx_reflection" }
rbx_xml = { path = "../rbx_xml" }

anyhow = "1.0.33"
dirs = "2.0.2"
bitflags = "1.0.4"
env_logger = "0.7.1"
lazy_static = "1.3.0"
log = "0.4.6"
notify = "4.0.15"
rmp-serde = "0.14.2"
roblox_install = "0.2.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.46"
serde_yaml = "0.8.13"
structopt = "0.3.9"
tempfile = "3.1.0"
tiny_http = "0.7.0"
toml = "0.5.0"
uuid = { version = "0.8.2", features = ["v4"] }
