[package]
name = "generate_reflection"
description = "Generates the rbx-dom reflection database."
version = "0.1.0"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"
publish = false

[dependencies]
rbx_reflection = { path = "../rbx_reflection" }
rbx_dom_weak = { path = "../rbx_dom_weak" }
rbx_xml = { path = "../rbx_xml" }

anyhow = "1.0.44"
bitflags = "1.3.2"
env_logger = "0.7.1"
lazy_static = "1.4.0"
log = "0.4.14"
notify = "4.0.17"
rmp-serde = "0.14.4"
roblox_install = "0.2.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.8.21"
structopt = "0.3.23"
tempfile = "3.2.0"
tiny_http = "0.7.0"
toml = "0.5.8"

[target.'cfg(windows)'.dependencies]
innerput = "0.0.2"
