[package]
name = "generate_reflection"
description = "Generates the rbx-dom reflection database."
version = "0.1.0"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"
publish = false

[dependencies]
rbx_reflection = { path = "../rbx_reflection" }
rbx_dom_weak = { path = "../rbx_dom_weak" }
rbx_xml = { path = "../rbx_xml" }

anyhow = "1.0.57"
bitflags = "1.3.2"
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.17"
notify = "4.0.17"
rmp-serde = "0.14.4"
roblox_install = "1.0.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_yaml = "0.8.24"
structopt = "0.3.26"
tempfile = "3.3.0"
tiny_http = "0.11.0"
toml = "0.5.9"
fs-err = "2.8.1"

[target.'cfg(windows)'.dependencies]
innerput = "0.0.2"
