[package]
name = "rbx_binary"
description = "Implementation of Roblox's binary model (rbxm) and place (rbxl) file formats"
version = "0.6.0-alpha.5"
license = "MIT"
documentation = "https://docs.rs/rbx_binary"
homepage = "https://github.com/rojo-rbx/rbx-dom"
repository = "https://github.com/rojo-rbx/rbx-dom.git"
readme = "README.md"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"

[features]
unstable_text_format = ["serde"]

[dependencies]
rbx_dom_weak = { version = "2.0.0", path = "../rbx_dom_weak" }
rbx_reflection = { version = "4.0.0", path = "../rbx_reflection" }
rbx_reflection_database = { version = "0.1.0", path = "../rbx_reflection_database" }

log = "0.4.6"
lz4 = "1.23.1"
thiserror = "1.0.16"
serde = { version = "1.0.103", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.3"
env_logger = "0.7.1"
heck = "0.3.1"
insta = "0.16.0"
serde = { version = "1.0.103", features = ["derive"] }

[[bench]]
name = "deserializer"
harness = false

[[bench]]
name = "serializer"
harness = false
