[package]
name = "rbx_binary"
description = "Implementation of Roblox's binary model (rbxm) and place (rbxl) file formats"
version = "0.6.2"
license = "MIT"
documentation = "https://docs.rs/rbx_binary"
homepage = "https://github.com/rojo-rbx/rbx-dom"
repository = "https://github.com/rojo-rbx/rbx-dom.git"
readme = "README.md"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"

[features]
unstable_text_format = ["serde"]

[dependencies]
rbx_dom_weak = { version = "2.2.0", path = "../rbx_dom_weak" }
rbx_reflection = { version = "4.1.0", path = "../rbx_reflection" }
rbx_reflection_database = { version = "0.2.1", path = "../rbx_reflection_database" }

log = "0.4.14"
lz4 = "1.23.2"
thiserror = "1.0.30"
serde = { version = "1.0.130", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.3.5"
env_logger = "0.7.1"
heck = "0.3.3"
insta = "0.16.1"
serde = { version = "1.0.130", features = ["derive"] }

[[bench]]
name = "deserializer"
harness = false

[[bench]]
name = "serializer"
harness = false
