[package]
name = "rbx_binary"
description = "Implementation of Roblox's binary model (rbxm) and place (rbxl) file formats"
version = "0.6.6"
license = "MIT"
documentation = "https://docs.rs/rbx_binary"
homepage = "https://github.com/rojo-rbx/rbx-dom"
repository = "https://github.com/rojo-rbx/rbx-dom.git"
readme = "README.md"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"

[features]
unstable_text_format = ["serde"]

[dependencies]
rbx_dom_weak = { version = "2.3.0", path = "../rbx_dom_weak" }
rbx_reflection = { version = "4.2.0", path = "../rbx_reflection" }
rbx_reflection_database = { version = "0.2.2", path = "../rbx_reflection_database" }

log = "0.4.17"
lz4 = "1.23.3"
thiserror = "1.0.31"
serde = { version = "1.0.137", features = ["derive"], optional = true }
profiling = "1.0.6"

[dev-dependencies]
criterion = "0.3.5"
env_logger = "0.9.0"
heck = "0.4.0"
insta = { version="1.14.1", features=["yaml"] }
serde = { version = "1.0.137", features = ["derive"] }

[[bench]]
name = "deserializer"
harness = false

[[bench]]
name = "serializer"
harness = false
