[package]
name = "rbx_binary_core"
version = "0.1.0"
license = "MIT"
documentation = "https://docs.rs/rbx_binary_core"
homepage = "https://github.com/rojo-rbx/rbx-dom"
repository = "https://github.com/rojo-rbx/rbx-dom.git"
readme = "README.md"
authors = [
    "Lucien Greathouse <me@lpghatguy.com>",
    "Micah Reid <git@dekkonot.com>",
    "Ken Loeffler <kenloef@gmail.com>",
]
edition = "2024"

[features]
serde = ["dep:serde"]

[dependencies]
rbx_reflection = { version = "6.1.0", path = "../rbx_reflection" }
rbx_types = { version = "3.1.0", path = "../rbx_types" }

log = "0.4.17"
lz4_flex = "0.11"
serde = { version = "1.0.137", features = ["derive"], optional = true }
thiserror = "1.0.31"
zstd = "0.13.2"
