[package]
name = "rbx_binary_wasm"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
serde-wasm-bindgen = "0.4"
getrandom = { version = "0.2", features = ["js"] }

rbx_dom_weak = { version = "2.9.0", path = "../rbx_dom_weak" }
rbx_binary = { version = "0.7.7", path = "../rbx_binary" }

console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
opt-level = 3
