[package]
name = "rbx_dom_test"
version = "0.1.0"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rbx_dom_weak = { path = "../rbx_dom_weak" }
serde = "1.0"
serde_json = "1.0"

[dependencies.insta]
version = "0.12.0"
features = ["redactions"]
