[package]
name = "rbx_dom_weak2"

# Don't publish before this crate is renamed back over rbx_dom_weak!
publish = false

description = "Weakly-typed Roblox DOM implementation for Rust"
version = "2.0.0-dev"
license = "MIT"
documentation = "https://docs.rs/rbx_dom_weak"
homepage = "https://github.com/rojo-rbx/rbx-dom"
repository = "https://github.com/rojo-rbx/rbx-dom.git"
readme = "README.md"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"

[dependencies]
rbx_types = { path = "../rbx_types" }

serde = "1.0.106"
