[package]
name = "rbx_dom_weak"
description = "Weakly-typed Roblox DOM implementation for Rust"
version = "3.0.0"
license = "MIT"
documentation = "https://docs.rs/rbx_dom_weak"
homepage = "https://github.com/rojo-rbx/rbx-dom"
repository = "https://github.com/rojo-rbx/rbx-dom.git"
readme = "README.md"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"

[features]
default = []
instance-userdata = ["dep:mlua"]

[dependencies]
rbx_types = { version = "2.0.0", path = "../rbx_types", features = ["serde"] }
ustr = { version = "1.1.0", features = ["serde"] }

ahash = "0.8.11"
serde = "1.0.137"
mlua = { version = "0.10.3", features = ["luau"], optional = true }

[dev-dependencies]
insta = { version = "1.14.1", features = ["yaml"] }
