[package]
name = "rbx_reflection"
description = "Roblox reflection database and ambiguous type resolution"
version = "4.2.0"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"

readme = "README.md"
license = "MIT"

homepage = "https://github.com/rojo-rbx/rbx-dom"
repository = "https://github.com/rojo-rbx/rbx-dom"

[dependencies]
rbx_types = { version = "1.3.0", path = "../rbx_types", features = ["serde"] }

serde = { version = "1.0.137", features = ["derive"] }
