[package]
name = "rbx_reflection"
description = "Roblox reflection database and ambiguous type resolution"
version = "4.5.0"
license = "MIT"
documentation = "https://docs.rs/rbx_reflection"
homepage = "https://github.com/rojo-rbx/rbx-dom"
repository = "https://github.com/rojo-rbx/rbx-dom.git"
readme = "README.md"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"

[dependencies]
rbx_types = { version = "1.8.0", path = "../rbx_types", features = ["serde"] }

serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.31"
