[package]
name = "rbx_reflection_database"
description = "Bundled reflection database for Roblox projects"
version = "0.2.5+roblox-530"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"

readme = "README.md"
license = "MIT"

homepage = "https://github.com/rojo-rbx/rbx-dom"
repository = "https://github.com/rojo-rbx/rbx-dom"

[dependencies]
rbx_reflection = { version = "4.2.0", path = "../rbx_reflection" }

lazy_static = "1.4.0"
serde = "1.0.137"
rmp-serde = "0.14.4"
