[package]
name = "rbx_reflection_database"
description = "Bundled reflection database for Roblox projects"
version = "1.0.1+roblox-666"
license = "MIT"
documentation = "https://docs.rs/rbx_reflection_database"
homepage = "https://github.com/rojo-rbx/rbx-dom"
repository = "https://github.com/rojo-rbx/rbx-dom.git"
readme = "README.md"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rbx_reflection = { version = "5.0.0", path = "../rbx_reflection" }

lazy_static = "1.4.0"
serde = "1.0.137"
rmp-serde = "1.1.1"
