[package]
name = "rbx_types"
description = "Types used to represent Roblox values"
version = "1.2.0"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rojo-rbx/rbx-dom"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11.0"
blake3 = "0.1.5"
bitflags = "1.3.2"
lazy_static = "1.4.0"
rand = "0.7.3"
serde = { version = "1.0.130", features = ["derive"], optional = true }
rbx_dom_weak = { version = "1.10.1", optional = true }

[dev-dependencies]
bincode = "1.3.3"
serde_json = "1.0.68"
