[package]
name = "rbx_types"
description = "Types used to represent Roblox values"
version = "3.1.0"
authors = [
    "Lucien Greathouse <me@lpghatguy.com>",
    "Micah Reid <git@dekkonot.com>",
    "Ken Loeffler <kenloef@gmail.com>",
]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rojo-rbx/rbx-dom"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
blake3 = "1.3.1"
bitflags = "2.13.0"
lazy_static = "1.4.0"
rand = "0.10.1"
thiserror = "1.0.31"
serde = { version = "1.0.137", features = ["derive"], optional = true }

[dev-dependencies]
insta = { version = "1.14.1", features = ["yaml"] }
rmp = "0.8.15"
rmp-serde = "1.1.0"
serde_json = "1.0.81"
