[package]
name = "rbx_util"
version = "0.1.0"
description = "Utilities for working with Roblox model and place files"
license = "MIT"
documentation = "https://docs.rs/rbx_util"
homepage = "https://github.com/rojo-rbx/rbx-dom"
repository = "https://github.com/rojo-rbx/rbx-dom.git"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"
readme = "README.md"

# This tool is not even close to ready for primetime!
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "rbx-util"

[dependencies]
anyhow = "1.0.57"
fs-err = "2.7.0"
rbx_binary = { path = "../rbx_binary", features = ["unstable_text_format"] }
rbx_xml = { path = "../rbx_xml" }
serde_yaml = "0.8.24"
structopt = "0.3.26"
