[package]
name = "rbx_xml"
description = "Implementation of Roblox's XML file formats, rbxlx and rbxmx"
version = "2.0.0"
license = "MIT"
documentation = "https://docs.rs/rbx_xml"
homepage = "https://github.com/rojo-rbx/rbx-dom"
repository = "https://github.com/rojo-rbx/rbx-dom.git"
readme = "README.md"
authors = [
    "Lucien Greathouse <me@lpghatguy.com>",
    "Micah Reid <git@dekkonot.com>",
    "Ken Loeffler <kenloef@gmail.com>",
]
edition = "2018"

[dependencies]
rbx_dom_weak = { version = "4.0.0", path = "../rbx_dom_weak" }
rbx_reflection = { version = "6.0.0", path = "../rbx_reflection" }
rbx_reflection_database = { version = "2.0.1", path = "../rbx_reflection_database" }

ahash = "0.8.11"
base64 = "0.13.0"
log = "0.4.17"
xml-rs = "0.8.4"

[dev-dependencies]
env_logger = "0.9.0"
insta = { version = "1.14.1", features = ["yaml"] }
heck = "0.4.1"
rbx_reflection_database = { path = "../rbx_reflection_database", features = [
    "debug_always_use_bundled",
] }
